Refactor ProjectTaskRepository for clarity and efficiency