@@ -10,17 +10,18 @@ import java.io.*;
 import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class ProjectTaskRepository implements IRepository<Object> {
 
     private final ConcurrentHashMap<String, Project> projects = new ConcurrentHashMap<>();
     private final ConcurrentHashMap<String, Task> tasks = new ConcurrentHashMap<>();
     private static final String DATA_FILE = "taskmanager_data.json";
+
     private final Gson gson = new GsonBuilder()
             .setPrettyPrinting()
             .registerTypeAdapter(LocalDateTime.class, new com.google.gson.TypeAdapter<LocalDateTime>() {
@@ -28,12 +29,14 @@ public class ProjectTaskRepository implements IRepository<Object> {
                 public void write(com.google.gson.stream.JsonWriter out, LocalDateTime value) throws IOException {
                     out.value(value != null ? value.toString() : null);
                 }
+
                 @Override
                 public LocalDateTime read(com.google.gson.stream.JsonReader in) throws IOException {
                     String str = in.nextString();
                     return str != null ? LocalDateTime.parse(str) : null;
                 }
-            }).create();
+            })
+            .create();
 
     public ProjectTaskRepository() {
         loadFromStorage();
@@ -41,18 +44,22 @@ public class ProjectTaskRepository implements IRepository<Object> {
 
     @Override
     public void save(Object entity) {
-        if (entity instanceof Project p) {
-            projects.put(p.getId(), p);
-        } else if (entity instanceof Task t) {
-            tasks.put(t.getId(), t);
+        if (entity instanceof Project project) {
+            projects.put(project.getId(), project);
+        } else if (entity instanceof Task task) {
+            tasks.put(task.getId(), task);
         }
         persistToJson();
     }
 
     @Override
     public Optional<Object> findById(String id) {
-        if (projects.containsKey(id)) return Optional.of(projects.get(id));
-        if (tasks.containsKey(id)) return Optional.of(tasks.get(id));
+        if (projects.containsKey(id)) {
+            return Optional.of(projects.get(id));
+        }
+        if (tasks.containsKey(id)) {
+            return Optional.of(tasks.get(id));
+        }
         return Optional.empty();
     }
 
@@ -68,8 +75,8 @@ public class ProjectTaskRepository implements IRepository<Object> {
 
     public List<Task> findTasksByProjectId(String projectId) {
         return tasks.values().stream()
-                .filter(t -> projectId.equals(t.getProjectId()))
-                .collect(Collectors.toList());
+                .filter(task -> projectId.equals(task.getProjectId()))
+                .toList();
     }
 
     @Override
@@ -89,23 +96,27 @@ public class ProjectTaskRepository implements IRepository<Object> {
 
     @Override
     public void saveAll(List<Object> entities) {
-        for (Object e : entities) save(e);
+        for (Object entity : entities) {
+            save(entity);
+        }
     }
 
     @Override
     public void loadFromStorage() {
         File file = new File(DATA_FILE);
-        if (!file.exists()) return;
+        if (!file.exists()) {
+            return;
+        }
 
         try (Reader reader = Files.newBufferedReader(Paths.get(DATA_FILE))) {
-            Type type = new TypeToken<StorageData>(){}.getType();
+            Type type = new TypeToken<StorageData>() {}.getType();
             StorageData data = gson.fromJson(reader, type);
             if (data != null) {
                 data.projects.forEach(p -> projects.put(p.getId(), p));
                 data.tasks.forEach(t -> tasks.put(t.getId(), t));
             }
         } catch (Exception e) {
-            System.err.println("Failed to load data: " + e.getMessage());
+            System.err.println("Warning: Failed to load data from JSON - " + e.getMessage());
         }
     }
 
@@ -114,7 +125,7 @@ public class ProjectTaskRepository implements IRepository<Object> {
             StorageData data = new StorageData(new ArrayList<>(projects.values()), new ArrayList<>(tasks.values()));
             gson.toJson(data, writer);
         } catch (Exception e) {
-            System.err.println("Failed to save data: " + e.getMessage());
+            System.err.println("Warning: Failed to save data to JSON - " + e.getMessage());
         }
     }
 
